# ollama

./: Cargo.toml  README.md
src/: error.rs  main.rs  my_ollama.rs  utils.rs
